unpackaged/objects/SSIS_Integration_Task_Execution_Error__c.object
<CustomObject>
  <fields>
    <fullName>Error_Code__c</fullName>
    <label>Error Code</label>
    <length>50</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Error_Date_Time__c</fullName>
    <label>Error Date Time</label>
    <type>DateTime</type>
  </fields>
  <fields>
    <fullName>Error_Description__c</fullName>
    <label>Error Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
  </fields>
  <fields>
    <fullName>SSIS_Integration_Task_Log__c</fullName>
    <label>SSIS Integration Task Log</label>
    <referenceTo>SSIS_Integration_Task_Log__c</referenceTo>
    <relationshipLabel>SSIS Integration Task Execution Errors</relationshipLabel>
    <relationshipName>SSIS_Integration_Task_Execution_Errors</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
  </fields>
  <fields>
    <fullName>Source_Name__c</fullName>
    <label>Source Name</label>
    <length>100</length>
    <type>Text</type>
  </fields>
  <label>SSIS Integration Task Execution Error</label>
  <nameField>
    <label>SSIS Integration Task Execution Error Na</label>
    <type>Text</type>
  </nameField>
  <pluralLabel>SSIS Integration Task Execution Errors</pluralLabel>
  <sharingModel>ControlledByParent</sharingModel>
</CustomObject>